tests/models/enum/named/u16/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(lt = 2.0)]
        value: u16
    },
}
fn main() {}
